chore: update faq for add cash and play pt1

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -10,6 +10,22 @@ After you create a contest, you can add and fund an optional rewards pool too. T
 
 Popular contest use cases include grants, hackathons, governance, bounties, ideathons, giveaways, awards ceremonies, best meme/tweet/essay competitions, feature requests, polls, game shows, etc. etc. Any kind of community decision is, effectively, a contest.
 
+### Do I need a crypto experience to play in a contest on JokeRace?
+No, Para allows anyone to join JokeRace contests without needing crypto. When you choose the “login with Para” option to sign up, a wallet is created for you automatically. From there you can add funds using Apple Pay, a debit card, or your Coinbase account.
+
+How do I send funds?
+1. tap user profile (upper right)
+2. tap “send funds”
+3. send funds from your wallet wherever you like
+
+There’s no need to rely on external apps to manage your funds. There’s no need to be dependent on embedded ones to custody them. Your funds are yours.
+
+### Which chains can I add cash to?
+See the full list of supported chains [here](https://help.coinbase.com/en/wallet/getting-started/what-types-of-crypto-does-wallet-support)
+
+### How do I claim my funds when I win?
+Just go to "my rewards" tab and you'll see a button to claim rewards for each entry that won. Unless there's a tie, in which case these go to the contest creator to distribute, and you should reach out to them.
+
 ### Why is JokeRace onchain?
 
 Onchain contests give you five benefits you couldn’t get offchain.
