chore: update faq for add cash and play pt2

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -42,7 +42,7 @@ Onchain contests give you five benefits you couldn’t get offchain.
 
 ### Can you delete entries?
 
-Contest creators can delete or batch delete entries during the entry and voting periods. Nobody can delete entries after the contest closes (after the voting period).
+Contest creators can delete or batch delete entries during the entry and voting periods. Nobody can delete entries after the contest closes (after the voting period). To preserve trust, we highly recommend only removing entries that clearly violate your contest instructions.
 
 ### I created a contest and want to edit it. Can I update any part of it?
 
@@ -220,17 +220,20 @@ Go to “Parameters” on the contest page, download the allowlist, and make sur
 
 ## Rewards
 
+### How does funding the rewards pool work?
+
+You can fund the rewards pool on the “rewards” page or sending ERC20s directly to the contract address on the rewards page.
+
 ### Can I withdraw funds from a rewards pool I created?
 
 Yes, the contest creator can always withdraw rewards from the rewards pool, but keep in mind legal liability if you’ve promised rewards to winners. You will also have to cancel the rewards pool before you can withdraw from it.
 
+### What happens when I withdraw funds from the rewards pool?
+People who have already entered will no longer get rewards for their entries, people who played in contests with self-funded rewards pools will lose access to those funds. Therefore, to maintain goodwill and reputation onchain we strongly recommend not withdrawing funds unless you need to cancel the whole contest.
+
 ### Can I withdraw funds from a rewards pool I funded?
 
 Only contest creators can withdraw funds of the associated rewards pool. If you are not the contest creator, we highly recommend that you do not fund a rewards pool, as there is no way for you to withdraw funds.
-
-### How does funding the rewards pool work?
-
-You can fund the rewards pool on the “rewards” page or sending ERC20s directly to the contract address on the rewards page.
 
 ### Who is responsible for KYC verification in contests?
 
