chore: update bridging docs

--- a/docs/pages/user-how-tos/bridging.mdx
+++ b/docs/pages/user-how-tos/bridging.mdx
@@ -1,23 +1,22 @@
-# Ruh-roh… I need funds. Wen moneys?
+# Ruh-roh… I need funds.
 
 If you don’t have funds to play in the contest, you’re in one of two camps.
 
-## Camp One: I have money in my wallet, but it says I need to add funds.
+## Option One: Transfer funds from one chain to another. 
 
-Good news. Your money is just on a different chain (network) from the one where the contest is held.
-
-You’ll just need to transfer your money from its current chain to the one that the contest is on by using a third-party bridge.
+You have money in your wallet, but you need to move it to the chain of the contestby using a third-party bridge.
 
 We recommend using a “bridge aggregator” which will let you choose from dozens of services. The major ones are:
 
 - [https://jumper.exchange](https://jumper.exchange/)
-- [https://www.squidrouter.com/](https://www.squidrouter.com/)
+- [https://relay.link/bridge/](https://relay.link/bridge/)
+- [https://shapeshift.com/](https://shapeshift.com/)
 
-Just about any major bridge will be featured in these aggregators, but if they don’t support the chain you want, you should check the official site of the chain itself to see if they support a bridge.
+If they don’t support the chain you want, check the official site of the chain itself.
 
-Not sure what chain the contest is on? You probably got a message like “add eth to base to get votes.” Here, eth is the token (money) you need, and base is the chain. But you can always see what chain a contest is on in the contest url, which is formatted jokerace.io/contest/[chain].
+When you tap “add funds,” you should see a logo showing you what chain the contest is on. (You can also find it in the url of the contest.)
 
-## Camp Two: I’ve never used this wallet, so I have no funds on it.
+## Option Two: I need to add funds from fiat.
 
 Here, you’re going to need to add funds. You’ll need to transfer from another wallet (account). We recommend setting up an account with an onboarding service like:
 
