--- a/docs/pages/technical-how-tos/verifying-contracts.mdx
+++ b/docs/pages/technical-how-tos/verifying-contracts.mdx
@@ -22,7 +22,7 @@ cast call <CONTRACT ADDRESS> "version()(string)" --rpc-url "<RPC_URL>"
 
 For `Contest` contracts, look for the flattened filed in the respective version's folder [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi).
 
-For `RewardsModule` contracts, look for the flattened filed in the respective version's folder [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi/modules).
+For `VoterRewardsModule` contracts, look for the flattened filed in the respective version's folder [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/contracts/bytecodeAndAbi/modules).
 
 ## Verify the contract
 
