chore: david updates pt2

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -192,7 +192,7 @@ You can fund the rewards pool on the “rewards” page or sending ERC20s direct
 
 ### Can I withdraw funds from a rewards pool I created?
 
-The contest creator can withdraw rewards from the rewards pool until the first vote is cast on the underlying contest, after that point the creator cannot withdraw. You will also have to cancel the rewards pool before you can withdraw from it.
+The contest creator can withdraw rewards from the rewards pool until the first vote is cast on the underlying contest, after which point the creator cannot withdraw. You will also have to cancel the rewards pool before you can withdraw from it.
 
 ### Can I withdraw funds from a rewards pool I funded?
 
@@ -208,24 +208,12 @@ Price curves steadily increase vote prices throughout the contest, incentivizing
 Rewards come from the contest’s reward pool. That pool is funded by voting charges and the creator can also add to it directly as well.
 
 ### Do all voters get rewarded?
-No. Only voters on the **winning entry (or entries)**, if the contest rewards multiple placements) receive a portion of the rewards pool. The more voters contribute to that entry’s total votes, the more you’ll earn. And with price curves, earlier votes may yield dramatically higher returns.
+No. Only voters on the **winning entry (or entries)** receive a portion of the rewards pool. The more voters contribute to that entry’s total votes, the more you can earn. And with price curves, earlier votes may yield dramatically higher returns.
 
 ### Why does jk labs take a 10% cut of charges?
 A 10% cut helps ensure contests  are more fair and engaging. Here’s why:
 - Prevents whales from farming rewards: The 10% cut helps ensure  brute-force winning is unprofitable. It disincentivizes whales from swooping in with a large pot of money to claim 1st place and earn from everyone else’s vote, since they effectively need to pay a 10% charge on their own votes. 
-- Encourages diverse voting: Once an entry has 90% of votes (assuming only 1st place voters earn), it’s no longer profitable to continue voting on that entry, so contestantsparticipants should consider all viable options to vote on. Likewise, voters can only earn if players vote on *other* entries in order to increase the rewards pool that lets them earn more than the 10% they pay. This helps encourage everyone to help share the contest with the most diverse contestantsparticipants possible in order to maximize their own rewards. 
-
-### How does this change voter strategy?
-Voter rewards introduce real decision-making into contests. For example:
-- You want to vote on entries that can win—since only winning voters earn
-- Once an entry in a fully self-funded contest has a certain percentage of votes [90%*(percent that their rank earns)], then voters can no longer earn from it. For example, let’s say 1st place voters get 100% of the rewards pool, and the rewards pool is funded by 90% of charges. If voters pay for 1000% of votes, and only get 90% of the funds from voting, then they effectively lose. 
-- The more entries in a contest, the greater the risk and reward for players. For example, if there are two entries, then one needs 51% to win. if there are 10, then one might only need 11%. This means that the risk and reward are both much greater since you can win 90% of rewards for 11% of the vote, but of course it's less likely you will.
-
-Price Curves create significantly deeper strategy:
-- Reward Conviction: Early votes are cheaper, offering much higher risk and return, with greater rewards for voting with conviction.
-- Liquidity Flywheel: Because voters earn more from voting early, they can provide liquidity into the rewards pool that then draws more people to play, setting off a liquidity flywheel that brings in more and more players as the contest continues.
-- Virality Incentives: Earnings come from everyone voting after you, encouraging voters to persuade others to follow their choices.
-- Drama: By creating FOMO and escalating rewards, contests become much more fun as the stakes rise continuously.
+- Encourages diverse voting: Once an entry has 90% of votes (assuming only 1st place voters earn), it’s no longer profitable to continue voting on that entry, so voters should consider all viable options to vote on. Likewise, voters can only earn if players vote on *other* entries in order to increase the rewards pool that lets them earn more than the 10% they pay. This helps encourage everyone to help share the contest with the most diverse contestantsparticipants possible in order to maximize their own rewards. 
 
 ### Who is responsible for KYC verification in contests?
 
