chore: add calculating ROI page

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -8,6 +8,7 @@ Check out the 20+ chains and we support [here](https://docs.jokerace.io/faq#whic
 
 - [Frequently Asked Questions](/faq)
 - [Our Team](/our-team)
+- [Calculating ROI](/calculating-roi)
 
 ### Technical How Tos
 
