chore: add troubleshooting to index and reorder pages

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -6,8 +6,8 @@ Check out the 20+ chains and we support [here](https://docs.jokerace.io/faq#whic
 
 ## Pages
 
-- [Frequently Asked Questions](/faq)
 - [Our Team](/our-team)
+- [Frequently Asked Questions](/faq)
 - [Calculating ROI](/calculating-roi)
 
 ### Technical How Tos
@@ -16,3 +16,4 @@ Check out the 20+ chains and we support [here](https://docs.jokerace.io/faq#whic
 - [Verifying Contracts](/technical-how-tos/verifying-contracts)
 - [JokeRace Onchain Data](/technical-how-tos/jokerace-onchain-data)
 - [Circuits](/technical-how-tos/circuits)
+- [Troubleshooting](/technical-how-tos/troubleshooting)
