chore: update homepage

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,8 +1,8 @@
 # Get started
 
-Make a contest! You can do it in 3 minutes at [jokerace.io](https://www.jokerace.io/) on any EVM chain that you want!
+Make a contest! You can do it in less than a minute at [jokerace.io](https://www.jokerace.io/)!
 
-Check out the 20+ chains and we support [here](https://docs.jokerace.io/faq#which-chains-is-jokerace-live-on)!
+Check out the 20+ chains we support [here](https://github.com/jk-labs-inc/jokerace/tree/staging/packages/react-app-revamp/config/wagmi/custom-chains)!
 
 ## Pages
 
