chore: add faqs on earning

--- a/docs/pages/faq.mdx
+++ b/docs/pages/faq.mdx
@@ -134,6 +134,18 @@ Additional considerations:
 ### Do all voters get rewarded?
 No. Only voters on the **winning entry (or entries**, if the contest rewards multiple placements) receive a portion of the rewards pool. The more you contribute to that entry’s total votes, the more you’ll earn. And with price curves, earlier votes may yield dramatically higher returns.
 
+### Can I lose money even if I vote on a winner?
+
+**Yes**. Though you will still earn money by voting on a winner, you might earn less than what you paid. There are two reasons for this. The first, most important one, is the price curve: late voters pay more per vote, so if an early and later voter each put in the same amount of money, the late voter will get a much smaller share of the rewards. This is deliberate to incentivize early conviction voting. By the time it’s clear or obvious what is going to win, it should be hard or impossible to earn. The second, is because only 90% of funds you pay go into the rewards pool, and only a portion of that might go to 1st place voters. So for example, if 1st place gets 80% of rewards, then for every $100 you put in, only $72 is going into the rewards for 1st place. This is also deliberate to prevent whales from manipulating the rewards by dropping in millions of dollars with an assurance they’ll get their money back.
+
+You can always check the math to calculate your presumed earnings [here](https://docs.jokerace.io/calculating-roi).
+
+### If it’s hard to make money at the end of a contest, then why would anyone vote near the end?
+
+There’s a few reasons it can still make sense to vote near the end of the contest when the price curve is quite high. First, if the contest is extremely close, you might still be able to make a gain.  Second, early voters might want to protect their earnings by voting at a slight loss near the end. And finally, even if you're voting in the last 10 minutes at a presumed loss, you could still earn if a lot more people come in and vote after you—since they're helping subsidize your earnings by paying even more than you. In close contests, this is not unlikely.
+
+You can always check the math to calculate your presumed earnings [here](https://docs.jokerace.io/calculating-roi).
+
 ### Why do you recommend a two-hour voting period?
 
 First, two hour contests play out like a traditional sports game, creating a much more fun experience where people can play along throughout the contest. Past two or three hours, it's hard for people to play in the contest live, defend their vote, and have fun strategizing about how to win.
